--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# custom ignore rules
+.idea/
+coding-challenge.iml
+
 # Source : https://github.com/github/gitignore
 # Maven, Node, Python, Rails
 
